接入文档管理功能